--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dummy_robot_bringup
-	previous = 
-	base = 57a9e78c453a
+	previous = 57a9e78c453a
+	base = 4424bfaf1aef
 	trim = 
 	trimbase = 
