--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/image_tools
-	previous = 
-	base = 5a9d66e96f24
+	previous = 5a9d66e96f24
+	base = 88b4abdf8006
 	trim = 
 	trimbase = 
