--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/demo_nodes_cpp
-	previous = 
-	base = 820b3b5c46d4
+	previous = 820b3b5c46d4
+	base = f8757d1f970a
 	trim = 
 	trimbase = 
