--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/intra_process_demo
-	previous = 
-	base = 4b4dd0688aab
+	previous = 4b4dd0688aab
+	base = 1554db4b0edb
 	trim = 
 	trimbase = 
