--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/composition
-	previous = 
-	base = c27409e1fffa
+	previous = c27409e1fffa
+	base = f4e3b56cbe3c
 	trim = 
 	trimbase = 
