--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dummy_map_server
-	previous = 
-	base = 24892dd3c6a2
+	previous = 24892dd3c6a2
+	base = 654c34005dc5
 	trim = 
 	trimbase = 
