--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/lifecycle_py
-	previous = 
-	base = 183634aafd26
+	previous = 183634aafd26
+	base = 948c6ddae2a6
 	trim = 
 	trimbase = 
