--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/demo_nodes_py
-	previous = 
-	base = 0c408e989c15
+	previous = 0c408e989c15
+	base = 4c24c1e5a0be
 	trim = 
 	trimbase = 
