--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/logging_demo
-	previous = 
-	base = 082b3f4724d0
+	previous = 082b3f4724d0
+	base = 46f30e2e1052
 	trim = 
 	trimbase = 
