--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/action_tutorials_cpp
-	previous = 
-	base = 1446539e0138
+	previous = 1446539e0138
+	base = 7af0a3e89629
 	trim = 
 	trimbase = 
