--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/quality_of_service_demo_py
-	previous = 
-	base = 8d276a861914
+	previous = 8d276a861914
+	base = 37aca3f770d3
 	trim = 
 	trimbase = 
