--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dummy_sensors
-	previous = 
-	base = f47e18330d0f
+	previous = f47e18330d0f
+	base = f76c77280c7c
 	trim = 
 	trimbase = 
