--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/action_tutorials_py
-	previous = 
-	base = 4b8e0f3f0cc4
+	previous = 4b8e0f3f0cc4
+	base = 7dcba90b1482
 	trim = 
 	trimbase = 
