--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/topic_monitor
-	previous = 
-	base = c4e093cc9704
+	previous = c4e093cc9704
+	base = ebf7002409ec
 	trim = 
 	trimbase = 
