--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pendulum_control
-	previous = 
-	base = a3a0805fbf44
+	previous = a3a0805fbf44
+	base = 52dc4c41f251
 	trim = 
 	trimbase = 
