--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/action_tutorials_interfaces
-	previous = 
-	base = d261c50ef0a3
+	previous = d261c50ef0a3
+	base = d1a15ce18065
 	trim = 
 	trimbase = 
