--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pendulum_msgs
-	previous = 
-	base = c7ab9e38d387
+	previous = c7ab9e38d387
+	base = 326884c10a94
 	trim = 
 	trimbase = 
