--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/quality_of_service_demo_cpp
-	previous = 
-	base = e2f26aa402a3
+	previous = e2f26aa402a3
+	base = bb7083eb5a19
 	trim = 
 	trimbase = 
