--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/topic_statistics_demo
-	previous = 
-	base = d9f025fb7645
+	previous = d9f025fb7645
+	base = f00922036305
 	trim = 
 	trimbase = 
