--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/lifecycle
-	previous = 
-	base = c8505d5d0c54
+	previous = c8505d5d0c54
+	base = 0ba91c3d9fb8
 	trim = 
 	trimbase = 
