--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/intra_process_demo
+	parent = release/rolling/intra_process_demo/0.33.1-2
 	previous = 4b4dd0688aab
 	base = e90b8b90ecba
 	trim = 
