--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/logging_demo
+	parent = release/rolling/logging_demo/0.33.1-2
 	previous = 082b3f4724d0
 	base = b0a15ff696eb
 	trim = 
