--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/dummy_robot_bringup
+	parent = release/rolling/dummy_robot_bringup/0.33.1-2
 	previous = 57a9e78c453a
 	base = 07510a587840
 	trim = 
