--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/lifecycle
+	parent = release/rolling/lifecycle/0.33.1-2
 	previous = c8505d5d0c54
 	base = 22030fb75551
 	trim = 
