--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/lifecycle_py
+	parent = release/rolling/lifecycle_py/0.33.1-2
 	previous = 183634aafd26
 	base = 15ac817c75a2
 	trim = 
