--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/dummy_map_server
+	parent = release/rolling/dummy_map_server/0.33.1-2
 	previous = 24892dd3c6a2
 	base = 0dbeaa533c8f
 	trim = 
