--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/quality_of_service_demo_py
+	parent = release/rolling/quality_of_service_demo_py/0.33.1-2
 	previous = 8d276a861914
 	base = db91bc1d983b
 	trim = 
