--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/action_tutorials_cpp
+	parent = release/rolling/action_tutorials_cpp/0.33.1-2
 	previous = 1446539e0138
 	base = b0385e90cfcd
 	trim = 
