--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/quality_of_service_demo_cpp
+	parent = release/rolling/quality_of_service_demo_cpp/0.33.1-2
 	previous = e2f26aa402a3
 	base = 8910058b891c
 	trim = 
