--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/demo_nodes_py
+	parent = release/rolling/demo_nodes_py/0.33.1-2
 	previous = 0c408e989c15
 	base = 45ff923795be
 	trim = 
