--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/topic_monitor
+	parent = release/rolling/topic_monitor/0.33.1-2
 	previous = c4e093cc9704
 	base = c54cb3a2c01e
 	trim = 
