--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/demo_nodes_cpp_native
+	parent = release/rolling/demo_nodes_cpp_native/0.33.1-2
 	previous = 6869da000d6f
 	base = 66f6bc3f5f07
 	trim = 
