--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/image_tools
+	parent = release/rolling/image_tools/0.33.1-2
 	previous = 5a9d66e96f24
 	base = 0d3534c9c0ab
 	trim = 
