--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/action_tutorials_interfaces
+	parent = release/rolling/action_tutorials_interfaces/0.33.1-2
 	previous = d261c50ef0a3
 	base = b125c584632c
 	trim = 
