--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/pendulum_control
+	parent = release/rolling/pendulum_control/0.33.1-2
 	previous = a3a0805fbf44
 	base = b91cdf07e364
 	trim = 
