--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/pendulum_msgs
+	parent = release/rolling/pendulum_msgs/0.33.1-2
 	previous = c7ab9e38d387
 	base = 51b84ffaa7db
 	trim = 
