--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/topic_statistics_demo
+	parent = release/rolling/topic_statistics_demo/0.33.1-2
 	previous = d9f025fb7645
 	base = 858a19e69cf4
 	trim = 
