--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/demo_nodes_cpp
+	parent = release/rolling/demo_nodes_cpp/0.33.1-2
 	previous = 820b3b5c46d4
 	base = acd3fd4e1142
 	trim = 
