--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/dummy_sensors
+	parent = release/rolling/dummy_sensors/0.33.1-2
 	previous = f47e18330d0f
 	base = 15bb48203440
 	trim = 
