--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/composition
+	parent = release/rolling/composition/0.33.1-2
 	previous = c27409e1fffa
 	base = 527152ce1062
 	trim = 
