--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/action_tutorials_py
+	parent = release/rolling/action_tutorials_py/0.33.1-2
 	previous = 4b8e0f3f0cc4
 	base = 5be26492d3ed
 	trim = 
